# PlayLox

./: README.md
plox/: .gitignore  pyproject.toml  pyrightconfig.json
plox/src/plox/: __main__.py  core.py  error.py  expr.py  lox_token.py  parser.py  scanner.py  token.py
plox/tests/: test_parser.py  test_scanner.py
