[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "plox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Z9RO", email = "z9ro4github@outlook.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
plox = "python src/plox"
test = "python -m unittest discover -s tests -p 'test_*.py'"

[dependency-groups]
dev = [
    "pyright>=1.1.398",
]
